--- a/election2020-prediction.ipynb
+++ b/election2020-prediction.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1770,7 +1770,7 @@
        "Name: user_location, dtype: object"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
        "Name: user_location, dtype: object"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
        "Name: user_location, dtype: object"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1929,7 +1929,7 @@
        "Name: count, Length: 2118, dtype: int64"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2008,7 @@
        "[0 rows x 22 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2452,7 +2452,7 @@
        "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2470,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2491,7 +2491,7 @@
        "Name: count, Length: 98928, dtype: int64"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2503,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3384,7 +3384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4241,18 +4241,18 @@
     }
    ],
    "source": [
-    "# Top10 users by tweet count\n",
+    "# Tweet count by candidate\n",
     "tweets_candidate = user_USAonly.groupby('candidate')['tweet'].count().sort_values(ascending=False).reset_index().head(10) \n",
     "\n",
     "# Interactive bar chart \n",
-    "top10_bar = px.bar(tweets_candidate, x='candidate', y='tweet', \n",
+    "tweet_bar = px.bar(tweets_candidate, x='candidate', y='tweet', \n",
     "template='plotly_dark', \n",
     "color_discrete_sequence=px.colors.qualitative.Dark24_r, \n",
     "# color_discrete_sequence=px.colors.qualitative.Dark24_r, \n",
     "title='Tweet counts in the USA for Trump and Biden') \n",
     "\n",
     "# To view the graph \n",
-    "top10_bar.show() "
+    "tweet_bar.show() "
    ]
   }
  ],
