--- a/election2020-prediction.ipynb
+++ b/election2020-prediction.ipynb
@@ -2465,6 +2465,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "#### Visualizing input data\n",
+    "\n",
     "Let's take a quick look the top users by tweet count, of which some do not appear to be particular individuals, but do contribute to sentiment."
    ]
   },
@@ -2531,6 +2534,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show the count of tweets by candidate"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -2562,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2570,7 +2580,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook election2020-prediction.ipynb to html\n",
-      "[NbConvertApp] Writing 5038189 bytes to election2020-prediction.html\n"
+      "[NbConvertApp] Writing 363529 bytes to election2020-prediction.html\n"
      ]
     }
    ],
