--- a/election2020-prediction-roBERTa.ipynb
+++ b/election2020-prediction-roBERTa.ipynb
@@ -7904,7 +7904,7 @@
     }
    ],
    "source": [
-    "# Drop rows which generate more than the maximum 512 tokens\n",
+    "# Identify all rows which generate more than the maximum 512 tokens\n",
     "rowlist = []\n",
     "\n",
     "for i in tqdm(range(len(tweetALL_dataset))):\n",
