--- a/election2020-prediction-ensemble.ipynb
+++ b/election2020-prediction-ensemble.ipynb
@@ -1225,7 +1225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show tweet distribution by ensemble confidence score"
+    "Show normalized tweet distribution by ensemble confidence score"
    ]
   },
   {
