Step 8 - minor updates

--- a/election2020-prediction-ensemble.ipynb
+++ b/election2020-prediction-ensemble.ipynb
@@ -331,13 +331,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a smaller sample size (20%) to run the ensemble model in reasonable amount of time based on limited compute."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#user_USAonly_sample = user_USAonly.sample(frac=.2, random_state=42)\n",
-    "\n",
     "# Get smaller sample dataset for performance but make sure to keep\n",
     "# both candidates represented equally.\n",
     "\n",
