Step 8 - minor updates

--- a/election2020-prediction-ensemble.ipynb
+++ b/election2020-prediction-ensemble.ipynb
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
     }
    ],
    "source": [
-    "# Initialize DitilBERT model\n",
+    "# Initialize DistilBERT model\n",
     "\n",
     "distilbert_tokenizer = AutoTokenizer.from_pretrained(\"distilbert-base-uncased-finetuned-sst-2-english\")\n",
     "device = 0 if torch.cuda.is_available() else -1\n",
