Step 8 - Minor chart updates

--- a/election2020-prediction-ensemble.ipynb
+++ b/election2020-prediction-ensemble.ipynb
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
     "\n",
     "# Customize the plot\n",
     "plt.xlabel('Candidates')\n",
-    "plt.ylabel('Percent Confidence')\n",
+    "plt.ylabel('Distribution')\n",
     "plt.title(f'Sentiment Distribution per Candidate (Confidence > {confidence * 100}%)')\n",
     "plt.xticks(x + bar_width * (n_sentiments-1)/2, candidates, rotation=45)\n",
     "plt.legend(title='Sentiment')\n",
